# enterprise-rag-copilot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: feedback.py  health.py  rag.py
app/core/: config.py  logging.py
app/services/: auto_ingest.py  bm25.py  chunking.py  embeddings.py  feedback.py  llm.py  reranker.py  trace_store.py  vector_store.py
evals/: advanced_eval.py  generation_eval.py  results.json  retrieval_eval.py  run_eval.py
evals/datasets/: golden_dataset.json
logs/: feedback.jsonl
scripts/: ingest.py
tests/: test_health.py
ui/: Dockerfile  app.py
