[project]
name = "enterprise-rag-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.18",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
[tool.pytest.ini_options]

pythonpath = ["."]

testpaths = ["tests"]
